--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -87,3 +87,13 @@ body, textarea, select, input, button {
 .sprite_icon {
   background: url(../img/sprite_icon.png) no-repeat 0 9999px;
 }
+
+.image_cover {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  text-indent: -9999px;
+  background: url(../img/sprite_cover.png) no-repeat -145px -57px;
+}
