--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -103,6 +103,6 @@ body, textarea, select, input, button {
 }
 
 
-.download {
+.download_bg {
   background: url(../img/download.png) no-repeat 0 9999px;
 }
