--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -102,7 +102,10 @@ body, textarea, select, input, button {
   background: url(../img/sprite_icon.png) no-repeat 0 9999px;
 }
 
-
 .download_bg {
   background: url(../img/download.png) no-repeat 0 9999px;
+}
+
+.sprite_button {
+  background: url(../img/sprite_button.png) no-repeat 0 9999px;
 }
